version 2.0.12 (cvs):
	* Make debug, quiet and build_suggestion_menu static in gtkspell.c
	  to prevent exporting them.
	* One additional translation (see po/ChangeLog).
	* Move spell-checking library from Libs to Libs.private in
	  gtkspell-2.0.pc 

version 2.0.11 (27-May-2005):
	* Re-enable apostrophe word-breaking workarounds (GNOME bug #97545).
	* Additional translations (see po/ChangeLog).

version 2.0.10 (27-Feb-2005):
	* Re-release 2.0.9 with debug mode turned off.
	* One additional translation (see po/ChangeLog).

version 2.0.9 (22-Feb-2005):
	* Enable building outside of srcdir (Mike Castle)
	* Use bind_textdomain_codeset to set UTF-8 encoding for all translations.
	* Do not delete the GtkTextTag from the tag table (needed for shared
	  tag tables).
	* Disable word-breaking workarounds when Pango >= 1.8.0 (GNOME bug #97545).
	* Many additional translations (see po/ChangeLog).

version 2.0.8 (08-Oct-2004):
	* Fix how the GtkTextTag is created to work with shared tag tables.
	* Additional translation (see po/ChangeLog).

version 2.0.7 (22-Aug-2004):
	* Activating the menu through a keybinding now properly checks the
	  word currently under the cursor.
	* Prevent the trampling on an application's textdomain (Stu Tomlinson).
	* Additional translations (see po/ChangeLog).

version 2.0.6 (26-Jun-2004):
	* Use new PANGO_UNDERLINE_ERROR style when available to highlight
	  misspelled words with squiggly red underline.
	* Internationalize with GNU Gettext. All five strings now translatable.
	  Thanks to Adriano Del Vigna de Almeida <katmandu@fs.inf.br>
	* New po/ChangeLog to track translation additions/updates.

version 2.0.5 (26-Jan-2004):
	* Don't check numeric words.  Combined with word breaking changes 
	  recently committed to Pango, this will handle all letter-number
	  combinations nicely.
	* "Add to Dictionary" now actually adds to personal dictionary.
	* New "Ignore All" menuitem to add a word to the current session.